--- a/car.html
+++ b/car.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="car.css">
 </head>
 <body>
-
+    <!-- comment -->
     <script src="car.js"></script>
 </body>
 </html>
