--- a/car.html
+++ b/car.html
@@ -7,8 +7,14 @@
     <link rel="stylesheet" href="car.css">
 </head>
 <body>
-    <!-- comment -->
-    <!-- comment2 -->
+    <!-- navmenu -->
+    <!-- coin -->
+    <!-- manysmth -->
+    <!-- mplanets -->
+    <!-- partners -->
+    <!-- team -->
+    <!-- quest -->
+    <!-- contacts -->
     <script src="car.js"></script>
 </body>
 </html>
