--- a/newproject.html
+++ b/newproject.html
@@ -9,13 +9,13 @@
 <body>
     <div class="mainpage">
         <div class="header">
-            <img class="rightpartinheader" src="rightpartinheader.png" alt="">
-            <img class="leftpartinheader" src="ft.png" alt="">
-            <img class="logoinheader" src="logoinheader.png" alt="">
-            <img class="linehearheader" src="linenearheader.png" alt="">
+            <img class="rightpartinheader" src="img/rightpartinheader.png" alt="">
+            <img class="leftpartinheader" src="img/ft.png" alt="">
+            <img class="logoinheader" src="img/logoinheader.png" alt="">
+            <img class="linehearheader" src="img/linenearheader.png" alt="">
         </div>
-           <img class="crug"src="crugonfirstpage1920.png" alt="">
-           <img class="textnearcrug" src="Frame 44.png" alt="">
+           <img class="crug"src="img/crugonfirstpage1920.png" alt="">
+           <div class="textnearcrug">Finity Token</div>
     </div>
     
     <script src="newprogect.js"></script>
