--- a/car.html
+++ b/car.html
@@ -13,8 +13,26 @@
     <!-- mplanets -->
     <!-- partners -->
     <!-- team -->
-    <!-- quest -->
-    <!-- contacts -->
+    <!-- quest+contacts -->
+    <div class="main">
+        <div class="text">Frequently Asked Questions</div>
+        <div class="list_box1">
+            <div class="textt1">What is Finity Touch?</div><img src="img/CaretDown.svg" alt="" id="KO"></div>
+        <div class="list_box2"><div class="textt2">Where can I buy a Finity token?</div><img src="img/CaretDown.svg" alt="" id="KO"></div>
+        <div class="list_box3"><div class="textt3">Didn't find the answer to your question?</div><img src="img/CaretDown.svg" alt="" id="KO"></div>
+        <div class="list_box4"><div class="textt4">What is the Finity token used for?</div><img src="img/CaretDown2.svg" alt="" id="KO">
+        <div class="textt">15% of the issue of Finity tokens is used as a monetary fund for the implementation of your ideas.</div></div>
+        <div class="list_box5"><div class="textt5">How to contact you?</div><img src="img/CaretDown.svg" alt="" id="KO"></div>
+        <div class="list_box6"><div class="textt6">How much does it cost?</div><img src="img/CaretDown.svg" alt="" id="KO"></div>
+        <div class="sectext">Contact Us
+            <div class="main_contact">
+                <div class="name">Name</div>
+                <div class="box1_contact"></div>
+                <div class="email">Email</div>
+                <div class="box2_contact"></div>
+            </div>
+        </div>
+    </div>
     <script src="car.js"></script>
 </body>
 </html>
