--- a/newproject.html
+++ b/newproject.html
@@ -9,7 +9,8 @@
 <body>
     <div class="mainpage">
         <div class="header">
-           <img src="lo" alt="">
+           <img class="logo" src="logoo.png" alt="">
+           <div class="textlogo">Finity Touch</div>
         </div>
            <img class="crug"src="img/crugonfirstpage1920.png" alt="">
            <div class="textnearcrug">Finity Token</div>
