--- a/car.html
+++ b/car.html
@@ -22,8 +22,7 @@
             <div class="textt1">What is Finity Touch?</div><img src="img/CaretDown.svg" alt="" id="KO"></div>
         <div class="list_box2"><div class="textt2">Where can I buy a Finity token?</div><img src="img/CaretDown.svg" alt="" id="KO"></div>
         <div class="list_box3"><div class="textt3">Didn't find the answer to your question?</div><img src="img/CaretDown.svg" alt="" id="KO"></div>
-        <div class="list_box4"><div class="textt4">What is the Finity token used for?</div><img src="img/CaretDown2.svg" alt="" id="KO">
-        <div class="textt">15% of the issue of Finity tokens is used as a monetary fund for the implementation of your ideas.</div></div>
+        <div class="list_box4"><div class="textt4">What is the Finity token used for?</div><img src="img/CaretDown.svg" alt="" id="KO"></div>
         <div class="list_box5"><div class="textt5">How to contact you?</div><img src="img/CaretDown.svg" alt="" id="KO"></div>
         <div class="list_box6"><div class="textt6">How much does it cost?</div><img src="img/CaretDown.svg" alt="" id="KO"></div>
         <div class="linear"></div>
@@ -37,12 +36,35 @@
                 <div class="box3_contact"></div>
             </div>
             <div class="send">
-                <div class="sendd">Send</div>
+                <div class="sendd"><a href="https://www.foxtrot.com.ua/uk?gclid=Cj0KCQjw0IGnBhDUARIsAMwFDLnvn5Mmrj11TBwrbxm3hnUChBRmYob0cskgT2Wjq-LtkMsWOIt_Qk8aAiC_EALw_wcB">Send</a> </div>
             </div>
-            </div>
-            
         </div>
+        
     </div>
+</div>
+<div class="niz">
+    <div class="img"><div class="imgshka"><img src="img/letter-t-logo-260nw-1035037741 1 (Traced)T.png" alt=""></div>
+    <div class="imgshka2"><img src="img/Finity TouchФИНТИ.png" alt=""></div>
+    <div class="displayimg">
+        <div class="img1"><img src="img/Symboltwiter.png" alt=""></div>
+        <div class="img2"><img src="img/Path-3telega.png" alt=""></div>
+        <div class="img3"><img src="img/Symbolinsta.png" alt=""></div>
+        <div class="img4"><img src="img/Vectorkakoytoin.png" alt=""></div>
+        <div class="img5"><img src="img/Vectordiscord.png" alt=""></div>
+    </div>
+    </div>
+    <div class="ujetekst">
+        <div class="tekst1"><a href="https://www.foxtrot.com.ua/uk?gclid=Cj0KCQjw0IGnBhDUARIsAMwFDLnvn5Mmrj11TBwrbxm3hnUChBRmYob0cskgT2Wjq-LtkMsWOIt_Qk8aAiC_EALw_wcB">Home</a></div>
+        <div class="tekst2"><a href="https://www.foxtrot.com.ua/uk?gclid=Cj0KCQjw0IGnBhDUARIsAMwFDLnvn5Mmrj11TBwrbxm3hnUChBRmYob0cskgT2Wjq-LtkMsWOIt_Qk8aAiC_EALw_wcB">Marketplace</a></div>
+        <div class="tekst3"><a href="https://www.foxtrot.com.ua/uk?gclid=Cj0KCQjw0IGnBhDUARIsAMwFDLnvn5Mmrj11TBwrbxm3hnUChBRmYob0cskgT2Wjq-LtkMsWOIt_Qk8aAiC_EALw_wcB">Token</a></div>
+        <div class="tekst4"><a href="https://www.foxtrot.com.ua/uk?gclid=Cj0KCQjw0IGnBhDUARIsAMwFDLnvn5Mmrj11TBwrbxm3hnUChBRmYob0cskgT2Wjq-LtkMsWOIt_Qk8aAiC_EALw_wcB">Fund</a></div>
+        <div class="tekst5"><a href="https://www.foxtrot.com.ua/uk?gclid=Cj0KCQjw0IGnBhDUARIsAMwFDLnvn5Mmrj11TBwrbxm3hnUChBRmYob0cskgT2Wjq-LtkMsWOIt_Qk8aAiC_EALw_wcB">Contact Us</a></div>
+        <div class="tekst6"><a href="https://www.foxtrot.com.ua/uk?gclid=Cj0KCQjw0IGnBhDUARIsAMwFDLnvn5Mmrj11TBwrbxm3hnUChBRmYob0cskgT2Wjq-LtkMsWOIt_Qk8aAiC_EALw_wcB">Privacy Policy</a></div>
+        <div class="tekst7" id="tekts7"><a href="https://www.foxtrot.com.ua/uk?gclid=Cj0KCQjw0IGnBhDUARIsAMwFDLnvn5Mmrj11TBwrbxm3hnUChBRmYob0cskgT2Wjq-LtkMsWOIt_Qk8aAiC_EALw_wcB">Buy Token</a></div>
+    </div>
+    <div class="textniz">The contents and opinions of this website are those of Finity Touch.  Finity Touch provides links to cryptocurrency exchanges as a service to the public</div>
+
+</div>
     <script src="car.js"></script>
 </body>
 </html>
