--- a/car.html
+++ b/car.html
@@ -19,19 +19,36 @@
         <div class="text">Frequently Asked Questions</div>
         <div class="linea"></div>
         <div class="list_box1">
-            <div class="textt1">What is Finity Touch?</div><img src="img/CaretDown.svg" alt="" id="KO"></div>
-        <div class="list_box2"><div class="textt2">Where can I buy a Finity token?</div><img src="img/CaretDown.svg" alt="" id="KO"></div>
-        <div class="list_box3"><div class="textt3">Didn't find the answer to your question?</div><img src="img/CaretDown.svg" alt="" id="KO"></div>
-        <div class="list_box4"><div class="textt4">What is the Finity token used for?</div><img src="img/CaretDown.svg" alt="" id="KO"></div>
-        <div class="list_box5"><div class="textt5">How to contact you?</div><img src="img/CaretDown.svg" alt="" id="KO"></div>
-        <div class="list_box6"><div class="textt6">How much does it cost?</div><img src="img/CaretDown.svg" alt="" id="KO"></div>
+            <div class="textt1">What is Finity Touch?</div>
+            <div class="probu"><img src="img/CaretDown.svg" alt="">
+            </div></div>
+        <div class="list_box1" id="fix">
+            <div class="textt1">Where can I buy a Finity token?</div>
+            <div class="probu"><img src="img/CaretDown.svg" alt="">
+            </div></div>
+        <div class="list_box1">
+            <div class="textt1">Didn't find the answer to your question?</div>
+            <div class="probu"><img src="img/CaretDown.svg" alt="">
+            </div></div>
+        <div class="list_box1" id="fix">
+            <div class="textt1">What is the Finity token used for?</div>
+            <div class="probu"><img src="img/CaretDown.svg" alt="">
+            </div></div>
+        <div class="list_box1">
+            <div class="textt1">How to contact you?</div>
+            <div class="probu"><img src="img/CaretDown.svg" alt="">
+            </div></div>
+        <div class="list_box1" id="fix">
+            <div class="textt1">How much does it cost?</div>
+            <div class="probu"><img src="img/CaretDown.svg" alt="">
+            </div></div>
         <div class="linear"></div>
         <div class="sectext">Contact Us
             <div class="main_contact">
                 <div class="name">Name</div>
                 <div class="box1_contact"></div>
                 <div class="email">Email</div>
-                <div class="box2_contact"></div>
+                <div class="box1_contact"></div>
                 <div class="message">Message</div>
                 <div class="box3_contact"></div>
             </div>
@@ -46,11 +63,11 @@
     <div class="img"><div class="imgshka"><img src="img/letter-t-logo-260nw-1035037741 1 (Traced)T.png" alt=""></div>
     <div class="imgshka2"><img src="img/Finity TouchФИНТИ.png" alt=""></div>
     <div class="displayimg">
-        <div class="img1"><img src="img/Symboltwiter.png" alt=""></div>
-        <div class="img2"><img src="img/Path-3telega.png" alt=""></div>
-        <div class="img3"><img src="img/Symbolinsta.png" alt=""></div>
-        <div class="img4"><img src="img/Vectorkakoytoin.png" alt=""></div>
-        <div class="img5"><img src="img/Vectordiscord.png" alt=""></div>
+                        <img src="img/Symboltwiter.png" alt="">
+                        <img src="img/Path-3telega.png" alt="">
+                        <img src="img/Symbolinsta.png" alt="">
+                        <img src="img/Vectorkakoytoin.png" alt="">
+                        <img src="img/Vectordiscord.png" alt="">
     </div>
     </div>
     <div class="ujetekst">
