--- a/car.html
+++ b/car.html
@@ -13,6 +13,18 @@
     <!-- manysmth -->
     <!-- mplanets -->
     <!-- partners -->
+    <div class="main_partners">
+        <div class="text_partners">Our Partners</div>
+        <div class="box_partnerov1"><img src="img/" alt=""></div>
+        <div class="box_partnerov2"><img src="img/" alt=""></div>
+        <div class="box_partnerov3"><img src="img/" alt=""></div>
+        <div class="box_partnerov4"><img src="img/" alt=""></div>
+        <div class="box_partnerov5"><img src="img/" alt=""></div>
+        <div class="box_partnerov6"><img src="img/" alt=""></div>
+        <div class="box_partnerov7"><img src="img/" alt=""></div>
+        <div class="box_partnerov8"><img src="img/" alt=""></div>
+        <div class="box_partnerov9"><img src="img/" alt=""></div>
+    </div>
     <!-- team -->
     <!-- quest+contacts -->
     <div class="main">
@@ -82,6 +94,10 @@
     <div class="textniz">The contents and opinions of this website are those of Finity Touch.  Finity Touch provides links to cryptocurrency exchanges as a service to the public</div>
 
 </div>
+
+
+
+
     <script src="car.js"></script>
 </body>
 </html>
