--- a/car.html
+++ b/car.html
@@ -15,15 +15,15 @@
     <!-- partners -->
     <div class="main_partners">
         <div class="text_partners">Our Partners</div>
-        <div class="box_partnerov1"><img src="img/" alt=""></div>
-        <div class="box_partnerov2"><img src="img/" alt=""></div>
-        <div class="box_partnerov3"><img src="img/" alt=""></div>
-        <div class="box_partnerov4"><img src="img/" alt=""></div>
-        <div class="box_partnerov5"><img src="img/" alt=""></div>
-        <div class="box_partnerov6"><img src="img/" alt=""></div>
-        <div class="box_partnerov7"><img src="img/" alt=""></div>
-        <div class="box_partnerov8"><img src="img/" alt=""></div>
-        <div class="box_partnerov9"><img src="img/" alt=""></div>
+        <div class="box_partnerov1"><img src="" alt=""></div>
+        <div class="box_partnerov2"><img src="" alt=""></div>
+        <div class="box_partnerov3"><img src="" alt=""></div>
+        <div class="box_partnerov4"><img src="" alt=""></div>
+        <div class="box_partnerov5"><img src="" alt=""></div>
+        <div class="box_partnerov6"><img src="" alt=""></div>
+        <div class="box_partnerov7"><img src="" alt=""></div>
+        <div class="box_partnerov8"><img src="" alt=""></div>
+        <div class="box_partnerov9"><img src="" alt=""></div>
     </div>
     <!-- team -->
     <!-- quest+contacts -->
