--- a/car.html
+++ b/car.html
@@ -13,36 +13,125 @@
     <!-- manysmth -->
     <!-- mplanets -->
     <!-- partners -->
+    <div class="main_partners">
+        <div class="text_partners">Our Partners</div>
+        <div class="box_partnerov1"><img src="img/META.png" alt="" id="part1"></div>
+        <div class="box_partnerov2"><img src="img/BINANCE CRUCHE.svg" alt="" id="part2"></div>
+        <div class="box_partnerov3"><img src="img/BITKOIN.svg" alt="" id="part3"></div>
+        <div class="box_partnerov4"><img src="img/binance.svg" alt="" id="part4"></div>
+        <div class="box_partnerov5"><img src="img/COIN.png" alt="" id="part5"></div>
+        <div class="box_partnerov6"><img src="img/TRUST.png" alt="" id="part6"></div>
+        <div class="box_partnerov7"><img src="img/COIN MARKERT.svg" alt="" id="part7"></div>
+        <div class="box_partnerov8"><img src="img/forbes.png" alt="" id="part8"></div>
+        <div class="box_partnerov9"><img src="img/FORK.png" alt="" id="part9"></div>
+    </div>
     <!-- team -->
+    <div class="main_team">
+        <div class="text_team">Our Team</div>
+        <div class="team1">
+            <img src="img/licho1.svg" alt="" id="team1">
+            <div class="imya_team1">Tigran Chobanian</div>
+            <div class="btm_text_team1">Co-Founder and CEO</div>
+            <div class="line"></div>
+        </div>
+        <div class="team2">
+            <img src="img/licho2.svg" alt="" id="team2">
+            <div class="imya_team2">Daniel Aushev</div>
+            <div class="btm_text_team2">Co-Founder and CMO</div>
+            <div class="line"></div>
+        </div>
+        <div class="team3">
+            <img src="img/licho3.svg" alt="" id="team3">
+            <div class="imya_team3">Erik Anastasian</div>
+            <div class="btm_text_team3">Co-Founder and CDO</div>
+            <div class="line"></div>
+        </div>
+        <div class="team4">
+            <img src="img/licho4.svg" alt="" id="team4">
+            <div class="imya_team4">Daniel Hrinberh</div>
+            <div class="btm_text_team4">Co-Founder and CCO</div>
+            <div class="line"></div>
+        </div>
+    </div>
+
+
+
+
+
+
+
     <!-- quest+contacts -->
     <div class="main">
         <div class="text">Frequently Asked Questions</div>
         <div class="linea"></div>
         <div class="list_box1">
-            <div class="textt1">What is Finity Touch?</div><img src="img/CaretDown.svg" alt="" id="KO"></div>
-        <div class="list_box2"><div class="textt2">Where can I buy a Finity token?</div><img src="img/CaretDown.svg" alt="" id="KO"></div>
-        <div class="list_box3"><div class="textt3">Didn't find the answer to your question?</div><img src="img/CaretDown.svg" alt="" id="KO"></div>
-        <div class="list_box4"><div class="textt4">What is the Finity token used for?</div><img src="img/CaretDown2.svg" alt="" id="KO">
-        <div class="textt">15% of the issue of Finity tokens is used as a monetary fund for the implementation of your ideas.</div></div>
-        <div class="list_box5"><div class="textt5">How to contact you?</div><img src="img/CaretDown.svg" alt="" id="KO"></div>
-        <div class="list_box6"><div class="textt6">How much does it cost?</div><img src="img/CaretDown.svg" alt="" id="KO"></div>
+            <div class="textt1">What is Finity Touch?</div>
+            <div class="probu"><img src="img/CaretDown.svg" alt="">
+            </div></div>
+        <div class="list_box1" id="fix">
+            <div class="textt1">Where can I buy a Finity token?</div>
+            <div class="probu"><img src="img/CaretDown.svg" alt="">
+            </div></div>
+        <div class="list_box1">
+            <div class="textt1">Didn't find the answer to your question?</div>
+            <div class="probu"><img src="img/CaretDown.svg" alt="">
+            </div></div>
+        <div class="list_box1" id="fix">
+            <div class="textt1">What is the Finity token used for?</div>
+            <div class="probu"><img src="img/CaretDown.svg" alt="">
+            </div></div>
+        <div class="list_box1">
+            <div class="textt1">How to contact you?</div>
+            <div class="probu"><img src="img/CaretDown.svg" alt="">
+            </div></div>
+        <div class="list_box1" id="fix">
+            <div class="textt1">How much does it cost?</div>
+            <div class="probu"><img src="img/CaretDown.svg" alt="">
+            </div></div>
         <div class="linear"></div>
         <div class="sectext">Contact Us
             <div class="main_contact">
                 <div class="name">Name</div>
                 <div class="box1_contact"></div>
                 <div class="email">Email</div>
-                <div class="box2_contact"></div>
+                <div class="box1_contact"></div>
                 <div class="message">Message</div>
                 <div class="box3_contact"></div>
             </div>
             <div class="send">
-                <div class="sendd">Send</div>
+                <div class="sendd"><a href="https://www.foxtrot.com.ua/uk?gclid=Cj0KCQjw0IGnBhDUARIsAMwFDLnvn5Mmrj11TBwrbxm3hnUChBRmYob0cskgT2Wjq-LtkMsWOIt_Qk8aAiC_EALw_wcB">Send</a> </div>
             </div>
-            </div>
-            
         </div>
+        
     </div>
+</div>
+<div class="niz">
+    <div class="img"><div class="imgshka"><img src="img/letter-t-logo-260nw-1035037741 1 (Traced)T.png" alt=""></div>
+    <div class="imgshka2"><img src="img/Finity TouchФИНТИ.png" alt=""></div>
+    <div class="displayimg">
+                        <img src="img/Symboltwiter.png" alt="">
+                        <img src="img/Path-3telega.png" alt="">
+                        <img src="img/Symbolinsta.png" alt="">
+                        <img src="img/Vectorkakoytoin.png" alt="">
+                        <img src="img/Vectordiscord.png" alt="">
+    </div>
+    </div>
+    <div class="ujetekst">
+        <div class="tekst1"><a href="https://www.foxtrot.com.ua/uk?gclid=Cj0KCQjw0IGnBhDUARIsAMwFDLnvn5Mmrj11TBwrbxm3hnUChBRmYob0cskgT2Wjq-LtkMsWOIt_Qk8aAiC_EALw_wcB">Home</a></div>
+        <div class="tekst2"><a href="https://www.foxtrot.com.ua/uk?gclid=Cj0KCQjw0IGnBhDUARIsAMwFDLnvn5Mmrj11TBwrbxm3hnUChBRmYob0cskgT2Wjq-LtkMsWOIt_Qk8aAiC_EALw_wcB">Marketplace</a></div>
+        <div class="tekst3"><a href="https://www.foxtrot.com.ua/uk?gclid=Cj0KCQjw0IGnBhDUARIsAMwFDLnvn5Mmrj11TBwrbxm3hnUChBRmYob0cskgT2Wjq-LtkMsWOIt_Qk8aAiC_EALw_wcB">Token</a></div>
+        <div class="tekst4"><a href="https://www.foxtrot.com.ua/uk?gclid=Cj0KCQjw0IGnBhDUARIsAMwFDLnvn5Mmrj11TBwrbxm3hnUChBRmYob0cskgT2Wjq-LtkMsWOIt_Qk8aAiC_EALw_wcB">Fund</a></div>
+        <div class="tekst5"><a href="https://www.foxtrot.com.ua/uk?gclid=Cj0KCQjw0IGnBhDUARIsAMwFDLnvn5Mmrj11TBwrbxm3hnUChBRmYob0cskgT2Wjq-LtkMsWOIt_Qk8aAiC_EALw_wcB">Contact Us</a></div>
+        <div class="tekst6"><a href="https://www.foxtrot.com.ua/uk?gclid=Cj0KCQjw0IGnBhDUARIsAMwFDLnvn5Mmrj11TBwrbxm3hnUChBRmYob0cskgT2Wjq-LtkMsWOIt_Qk8aAiC_EALw_wcB">Privacy Policy</a></div>
+        <div class="tekst7" id="tekts7"><a href="https://www.foxtrot.com.ua/uk?gclid=Cj0KCQjw0IGnBhDUARIsAMwFDLnvn5Mmrj11TBwrbxm3hnUChBRmYob0cskgT2Wjq-LtkMsWOIt_Qk8aAiC_EALw_wcB">Buy Token</a></div>
+    </div>
+    <div class="textniz">The contents and opinions of this website are those of Finity Touch.  Finity Touch provides links to cryptocurrency exchanges as a service to the public</div>
+
+</div>
+
+
+
+
     <script src="car.js"></script>
 </body>
 </html>
