--- a/car.html
+++ b/car.html
@@ -28,6 +28,7 @@
     <!-- team -->
     <div class="main_team">
         <div class="text_team">Our Team</div>
+        <div class="team_container">
         <div class="team1">
             <img src="img/licho1.svg" alt="" id="team11">
             <div class="imya_team1">Tigran Chobanian</div>
@@ -52,6 +53,7 @@
             <div class="btm_text_team4">Co-Founder and CCO</div>
             <div class="line"></div>
         </div>
+    </div>
     </div>
 
 
