--- a/car.html
+++ b/car.html
@@ -14,6 +14,7 @@
     <!-- mplanets -->
     <!-- partners -->
     <div class="main_partners">
+        <div class="partners">
         <div class="text_partners">Our Partners</div>
         <div class="box_partnerov1"><img src="img/META.png" alt="" id="part1"></div>
         <div class="box_partnerov2"><img src="img/BINANCE CRUCHE.svg" alt="" id="part2"></div>
@@ -25,29 +26,54 @@
         <div class="box_partnerov8"><img src="img/forbes.png" alt="" id="part8"></div>
         <div class="box_partnerov9"><img src="img/FORK.png" alt="" id="part9"></div>
     </div>
+</div>
     <!-- team -->
     <div class="main_team">
         <div class="text_team">Our Team</div>
         <div class="team_container">
         <div class="team1">
+            <div class="absolute_team">
+            <img src="img/IN.png" alt="" id="team_gap">
+            <img src="img/INSTAGRAM.png" alt="" id="team_gap">
+            <img src="img/TELEGRAM.png" alt="" id="team_gap">
+            <img src="img/X.png" alt="" id="team_gap">
+        </div>
             <img src="img/licho1.svg" alt="" id="team11">
             <div class="imya_team1">Tigran Chobanian</div>
             <div class="btm_text_team1">Co-Founder and CEO</div>
             <div class="line"></div>
         </div>
-        <div class="team2">
+        <div class="team1">
+            <div class="absolute_team">
+                <img src="img/IN.png" alt="" id="team_gap">
+                <img src="img/INSTAGRAM.png" alt="" id="team_gap">
+                <img src="img/TELEGRAM.png" alt="" id="team_gap">
+                <img src="img/X.png" alt="" id="team_gap">
+            </div>
             <img src="img/licho2.svg" alt="" id="team11">
             <div class="imya_team2">Daniel Aushev</div>
             <div class="btm_text_team2">Co-Founder and CMO</div>
             <div class="line"></div>
         </div>
-        <div class="team3">
+        <div class="team1">
+            <div class="absolute_team">
+                <img src="img/IN.png" alt="" id="team_gap">
+                <img src="img/INSTAGRAM.png" alt="" id="team_gap">
+                <img src="img/TELEGRAM.png" alt="" id="team_gap">
+                <img src="img/X.png" alt="" id="team_gap">
+            </div>
             <img src="img/licho3.svg" alt="" id="team11">
             <div class="imya_team3">Erik Anastasian</div>
             <div class="btm_text_team3">Co-Founder and CDO</div>
             <div class="line"></div>
         </div>
-        <div class="team4">
+        <div class="team1">
+            <div class="absolute_team">
+                <img src="img/IN.png" alt="" id="team_gap">
+                <img src="img/INSTAGRAM.png" alt="" id="team_gap">
+                <img src="img/TELEGRAM.png" alt="" id="team_gap">
+                <img src="img/X.png" alt="" id="team_gap">
+            </div>
             <img src="img/licho4.svg" alt="" id="team11">
             <div class="imya_team4">Daniel Hrinberh</div>
             <div class="btm_text_team4">Co-Founder and CCO</div>
