--- a/car.html
+++ b/car.html
@@ -29,6 +29,7 @@
 </div>
     <!-- team -->
     <div class="main_team">
+        <div class="lin"></div>
         <div class="text_team">Our Team</div>
         <div class="team_container">
         <div class="team1">
